--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --brand-light: #F67841;
   --brand-mid: #F3541C;
   --brand-dark: #E43A12;
@@ -29,7 +29,7 @@
   --blue-color: #B8CEDC;
   --violet-color: #C3B2E7;
   --pink-color: #F682A5;
-  
+
   --font-family: "poppins", sans-serif;
   --text-h1-bold: 700 40px/125% var(--font-family);
   --text-h1: 700 32px/120% var(--font-family);
@@ -39,20 +39,46 @@
   --text-regular: 400 16px/150% var(--font-family);
 }
 
-body{
+body {
   font: var(--font-family);
   color: var(--text-color-primary);
   background-color: var(--surface-color-primary);
 }
 
-.container{
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
   display: grid;
-  padding-inline: 64px;
+  padding: 64px;
   margin-inline: auto;
   max-width: 1280px;
 }
 
-.highlight{
+.highlight {
   color: var(--text-color-highlight);
 }
 
+input {
+  border-radius: 8px;
+  height: 48px;
+  border: 1px solid var(--strok-default);
+}
+
+input:disabled {
+  background-color: var(--surface-color-disabled);
+}
+
+input:hover{
+  border: 1px solid var(--strok-highlight);
+  box-shadow: 0 0 5px rgba(#FEE7D6, green, blue, alpha);
+}
+
+input:focus{
+  border-radius: 8px;
+  height: 48px;
+  border: 1px solid var(--strok-highlight);
+  box-shadow: 3px 3px 3px rgba(#FEE7D6, green, blue, alpha);
+}
