--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@
   --text-color-highlight: #E43A12;
 
   --surface-color-primary: #FFFFFF;
-  --surface-color-secondary: #FEE7D6;
+  --surface-color-secondary: #fee7d6;
   --surface-color-disabled: #E7E5E4;
 
   --strok-default: #D6D3D1;
@@ -50,6 +50,16 @@ a {
   color: inherit;
 }
 
+input, textarea, select{
+  appearance: none;
+  width: 100%;
+  border-radius: .5rem;
+
+  padding: .75rem 1rem;
+
+  font: var(--font-family);
+}
+
 .container {
   display: grid;
   padding: 64px;
@@ -61,24 +71,51 @@ a {
   color: var(--text-color-highlight);
 }
 
-input {
+input[type="text"] {
   border-radius: 8px;
   height: 48px;
   border: 1px solid var(--strok-default);
+
+  &:disabled{
+    background-color: var(--surface-color-disabled);
+  }
+
+  &:hover{
+    box-shadow: 0 0 10px #fee7d6;
+    border: 1px solid var(--strok-highlight);
+  }
+
+  &:focus{
+    border: 1px solid var(--strok-highlight);
+    box-shadow: 0 0 10px #fee7d6;
+    outline: none;
+  }
 }
 
-input:disabled {
-  background-color: var(--surface-color-disabled);
-}
 
-input:hover{
-  border: 1px solid var(--strok-highlight);
-  box-shadow: 0 0 5px rgba(#FEE7D6, green, blue, alpha);
-}
 
-input:focus{
+
+input[type="date"] {
+  position: relative;
   border-radius: 8px;
   height: 48px;
-  border: 1px solid var(--strok-highlight);
-  box-shadow: 3px 3px 3px rgba(#FEE7D6, green, blue, alpha);
+  border: 1px solid var(--strok-default);
+
+  &::-webkit-calendar-picker-indicator {
+      opacity: 0;
+  }
+
+  &::before{
+    content: "";
+    position: absolute;
+    background: url(../assets/icons/calendar-03.svg) center/contain;
+    right: 1rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    /* alinhar as coisas ao meio */
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
+
+
