--- a/styles/global.css
+++ b/styles/global.css
@@ -36,86 +36,22 @@
   --text-h2: 700 24px/120% var(--font-family);
   --text-h3: 700 20px/120% var(--font-family);
   --text-h4: 700 16px/120% var(--font-family);
-  --text-regular: 400 16px/150% var(--font-family);
+  --text-regular: 400 1rem/1.5 var(--font-family);
 }
 
 body {
   font: var(--font-family);
   color: var(--text-color-primary);
   background-color: var(--surface-color-primary);
+
+  /* garante que não tem rolagem */
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-input, textarea, select{
-  appearance: none;
+img {
   width: 100%;
-  border-radius: .5rem;
-
-  padding: .75rem 1rem;
-
-  font: var(--font-family);
-}
-
-.container {
-  display: grid;
-  padding: 64px;
-  margin-inline: auto;
-  max-width: 1280px;
-}
-
-.highlight {
-  color: var(--text-color-highlight);
-}
-
-input[type="text"] {
-  border-radius: 8px;
-  height: 48px;
-  border: 1px solid var(--strok-default);
-
-  &:disabled{
-    background-color: var(--surface-color-disabled);
-  }
-
-  &:hover{
-    box-shadow: 0 0 10px #fee7d6;
-    border: 1px solid var(--strok-highlight);
-  }
-
-  &:focus{
-    border: 1px solid var(--strok-highlight);
-    box-shadow: 0 0 10px #fee7d6;
-    outline: none;
-  }
+  height: auto;
 }
 
 
-
-
-input[type="date"] {
-  position: relative;
-  border-radius: 8px;
-  height: 48px;
-  border: 1px solid var(--strok-default);
-
-  &::-webkit-calendar-picker-indicator {
-      opacity: 0;
-  }
-
-  &::before{
-    content: "";
-    position: absolute;
-    background: url(../assets/icons/calendar-03.svg) center/contain;
-    right: 1rem;
-    width: 1.25rem;
-    height: 1.25rem;
-    /* alinhar as coisas ao meio */
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
 
 
