--- a/styles/global.css
+++ b/styles/global.css
@@ -41,17 +41,33 @@
 
 body {
   font: var(--font-family);
-  color: var(--text-color-primary);
+  color: var(--text-color-secondary);
   background-color: var(--surface-color-primary);
 
   /* garante que não tem rolagem */
 }
 
+h1, h2 {
+  color: var(--text-color-primary);
+}
+
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
+.flex {
+  display: flex;
+  gap: .5REM;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2{
+  flex: 2;
+}
 
 
 
