--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,4 @@
 @import url(global.css);
 @import url(layout.css);
 @import url(main.css);
-@import url(aside.css);
-@import url(form.css);
+@import url(forms.css);
